--- a/.github/workflows/hakunaPipline.yaml
+++ b/.github/workflows/hakunaPipline.yaml
@@ -83,5 +83,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: latest,${{ steps.meta.outputs.tags }}
-          labels: production
+          tags: ${{ steps.meta.outputs.tags }}
