--- a/package.json
+++ b/package.json
@@ -2,19 +2,32 @@
   "name": "learning-management-system",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start:dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start:dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "jsonwebtoken": "^9.0.2",
+    "sequelize": "^6.32.1",
+    "swagger-ui-express": "^5.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
 }
