--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "learning-management-system",
+  "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ]
+  },
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -12,11 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jest": "^29.6.2",
+    "express-validator": "^7.0.1",
+    "jest": "^29.6.4",
     "jsonwebtoken": "^9.0.2",
-    "sequelize": "^6.32.1",
+    "mysql": "^2.18.1",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
   },
