--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "jest",
     "start:dev": "nodemon src/app.js",
-    "start": "node src/app.js"
+    "start": "npm run start:dev"
   },
   "author": "",
   "license": "ISC",
