--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,7 @@
-version: '3'
+version: "3"
 services:
   node-app:
-    build: 
+    build:
       context: .
       target: production
     environment:
