--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,35 @@
-version: '3'
+version: "3"
 services:
   node-app:
     container_name: express-node-app-container
     image: hakuna03/learning-management-system
     ports:
       - "4000:4000"
+    networks:
+      - internalnet
+
+  mysqldb:
+    image: mysql:8.0.34
+    container_name: mysql-container
+    command: --default-authentication-plugin=mysql_native_password
+    restart: unless-stopped
+    volumes:
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - C:/databases:/var/lib/mysql
+    ports:
+      - 3306:3306
+    expose:
+      - 3306
+    environment:
+      MYSQL_ROOT_PASSWORD: 12345678
+      MYSQL_DATABASE: lms
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: 12345678
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysqldb
+    networks:
+      - internalnet
+
+networks:
+  internalnet:
+    driver: bridge
