--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "jest",
     "start:dev": "nodemon src/app.js",
-    "start": "npm run start:dev"
+    "start": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "jest": "^29.6.4",
     "jsonwebtoken": "^9.0.2",
