--- a/.github/workflows/hakunaPipline.yaml
+++ b/.github/workflows/hakunaPipline.yaml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - main
-      - development
+      - dev
   pull_request:
     branches:
       - main
-      - development
+      - dev
 env:
   REGISTRY: docker.io
   IMAGE_NAME: hakuna03/learning-management-system
