--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "jest": "^29.6.4",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "supertest": "^6.3.3",
-    "swagger-ui-express": "^4.6.3",
-    "yamljs": "^0.3.0"
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
